@@ -1,2 +1,8 @@
-<script type="text/javascript" src="http://yui.yahooapis.com/2.5.2/build/yahoo-dom-event/yahoo-dom-event.js"></script>
-<script type="text/javascript" src="/js/thoth.js"></script>
+<% if auth_key_valid? %>
+  <script type="text/javascript" src="http://yui.yahooapis.com/combo?2.5.2/build/yahoo-dom-event/yahoo-dom-event.js&amp;2.5.2/build/connection/connection-min.js&amp;2.5.2/build/json/json-min.js"></script>
+  <script type="text/javascript" src="/js/thoth.js"></script>
+  <script type="text/javascript" src="/js/admin/tagcomplete.js"></script>
+<% else %>
+  <script type="text/javascript" src="http://yui.yahooapis.com/2.5.2/build/yahoo-dom-event/yahoo-dom-event.js"></script>
+  <script type="text/javascript" src="/js/thoth.js"></script>
+<% end %>
